2005-09-20  Derek Price  <derek@ximbiot.com>

	* myndbm.c: #include getdelim.h for Windows.

	* main.c: #include setenv.h for Windows.

2005-09-19  Derek Price  <derek@ximbiot.com>

	* sanity.sh (modules5-8): Rename...
	(modules5-8r): ...to this and comment Mac OS X failure.
	Comment Solaris 9 failure below with a `FIXME?' tag.

	* sanity.sh: Remove previous hack in favor of setting TESTDIR on
	Solaris (and Mac OS X) until problem is solved correctly.

2005-09-15  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Use /bin/pwd to verify current dir since Solaris 9 is
	sometimes resolving symlinked paths.

2005-09-14  Derek Price  <derek@ximbiot.com>

	* edit.c (edit_usage, unedit_usage, editors_usage), watch.c
	(watch_usage, watchers_usage): Add quotes and reword for clarity and
	consistency.

	* edit.c (edit_usage): Add missing syntax.  Reword description for
	clarity.  Mention default behavior.

2005-09-13  Derek Price  <derek@ximbiot.com>

	* sanity.sh ($anyusername): Reduce charset to that allowed on Linux.

	* sanity.sh ($anyusername): Make more robust and expand comments.
	Reported by Mark D. Baushke <mdb@gnu.org>.

	* sanity.sh: Split $username into $username & $username8.  Rename
	$author as $anyusername.

2005-09-12  Derek Price  <derek@ximbiot.com>

	* sanity.sh (username): Cut $username down to 8 characters when longer,
	since that is all that appears in output.

2005-09-11  Derek Price  <derek@ximbiot.com>

	[bug #14504]
	* main.c (main): Set server_hostname before it is used by
	gserver_authenticate_connection.
	(Report from Serguei E. Leontiev <leo@sai.msu.ru>.)

2005-09-08  Larry Jones  <lawrence.jones@ugs.com>

	* server.c (parseServerOptions): getopt() returns int, not char.

2005-09-07  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_parse): Minor reformatting.

	Close <http://savannah.nongnu.org/bugs/?func=detailitem&item_id=14462>.
	* rcs.c (RCS_parse): Free variable *after* using it for the last time.

2005-09-06  Derek Price  <derek@ximbiot.com>
